manifests/simpleapirestaurant-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapirestaurant
  labels:
    app: sar
spec:
  selector:
    app: sar
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "YOUR.IP.ADDRESS.HERE"
