manifests/simpleapirestaurant-ingress-static-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simpleapirestaurant
  annotations:
    kubernetes.io/ingress.global-static-ip-name: simpleapirestaurant-ip
  labels:
    app: sar
spec:
  backend:
    serviceName: simpleapirestaurant-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapirestaurant-backend
  labels:
    app: sar
spec:
  type: NodePort
  selector:
    app: sar
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
